Fix test alignment

--- a/public/css/clinic.styl
+++ b/public/css/clinic.styl
@@ -26,6 +26,10 @@ td.border
 
 .question
   text-align: right
+  margin: auto
 
 #answer
   font-size: 3em
+
+div[data-role="page"]
+  overflow: hidden
