--- a/public/css/numpad.styl
+++ b/public/css/numpad.styl
@@ -1,9 +1,8 @@
 #numpad
   margin: 0
-  padding: 10px 10px 10px 10px
+  padding: 0
   font: 71%/1.5 Verdana, Sans-Serif
   background: #eee
-  margin: 20px auto
   width: 180px
   list-style: none
 
